--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6,15 +6,16 @@
 # Jick Nan <jick.nan@gmail.com>, 2006.
 # wuli <wurisky@gmail.com>,2007,2008
 # Hunt Xu <huntxu@live.cn>, 2008.
-# Chris K. Zhang <plutino@gmail.com>, 2009
+# Chris K. Zhang <plutino@gmail.com>, 2009.
+# Aron Xu <aronmalache@163.com>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-01-19 12:16-0800\n"
-"Last-Translator: Chris K. Zhang <plutino@gmail.com>\n"
+"PO-Revision-Date: 2009-06-14 02:23+0800\n"
+"Last-Translator: Aron Xu <aronmalache@163.com>\n"
 "Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -142,7 +143,7 @@ msgstr "无法打开显示"
 
 #: ../panel/main.c:104
 msgid "The Xfce development team. All rights reserved."
-msgstr "Xfce 开发组，版权所有。"
+msgstr "Xfce 开发团队，版权所有。"
 
 #. TRANSLATORS: Bug report website, %s points to bugzilla.xfce.org
 #: ../panel/main.c:107
@@ -162,7 +163,7 @@ msgstr "正在重新启动 xfce4-panel..."
 #: ../panel/panel-dialogs.c:197
 #, c-format
 msgid "Could not open \"%s\" module"
-msgstr "无法打开 “%s ”模块。"
+msgstr "无法打开模块“%s”"
 
 #: ../panel/panel-dialogs.c:611
 msgid "Add New Items"
@@ -270,11 +271,11 @@ msgstr "外观"
 
 #: ../panel/panel-dialogs.c:1414
 msgid "_Size (pixels):"
-msgstr "大小(_S)（像素）："
+msgstr "大小(_S)(像素)："
 
 #: ../panel/panel-dialogs.c:1445
 msgid "_Transparency (%):"
-msgstr "透明度(_T)（％）："
+msgstr "透明度(_T)(％)："
 
 #: ../panel/panel-dialogs.c:1471
 msgid "Make active panel _opaque"
@@ -433,19 +434,19 @@ msgstr "可执行文件"
 
 #: ../plugins/launcher/launcher-dialog.c:661
 msgid "Perl Scripts"
-msgstr "Perl Scripts"
+msgstr "Perl 脚本"
 
 #: ../plugins/launcher/launcher-dialog.c:667
 msgid "Python Scripts"
-msgstr "Python Scripts"
+msgstr "Python 脚本"
 
 #: ../plugins/launcher/launcher-dialog.c:673
 msgid "Ruby Scripts"
-msgstr "Ruby Scripts"
+msgstr "Ruby 脚本"
 
 #: ../plugins/launcher/launcher-dialog.c:679
 msgid "Shell Scripts"
-msgstr "Shell Scripts"
+msgstr "Shell 脚本"
 
 #. TRANSLATORS: Fallback name for a launcher item without a name
 #: ../plugins/launcher/launcher-dialog.c:755
