--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-26  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation reworked.
+
 2009-06-15  Mike Massonnet <mmassonnet@xfce.org>
 
 	* zh_CN.po: Simplified Chinese update (Hunt Xu)
