--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-26  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation reworked.
+
 2009-05-29  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ur_PK.po: Urdu Pakistan translation update (Muhammad Ali Makki)
