Fix typo in Basque translation
(Old svn revision: 30314)

--- a/po/eu.po
+++ b/po/eu.po
@@ -569,7 +569,7 @@ msgstr "Ezkutatuko leihoa berrezarri"
 
 #: ../plugins/showdesktop/showdesktop.c:34
 msgid "Hide windows and show desktop"
-msgstr "Leihoan ezkutatu eta mahaigaina bistarazi"
+msgstr "Leihoa ezkutatu eta mahaigaina bistarazi"
 
 #: ../plugins/systray/xfce-tray-plugin.c:70
 #: ../plugins/systray/xfce-tray-dialogs.c:333
