--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-15  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Fix typo in Basque translation
+
 2009-07-09  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ast.po: Asturian translation added (Marcos).
