Polish translation update
(Old svn revision: 30423)

--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-04-14 19:28+0100\n"
+"PO-Revision-Date: 2009-04-22 10:29+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
@@ -789,7 +789,7 @@ msgstr "Przełącza pomiędzy oknami przy pomocy menu"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
-msgstr "Preferencje panelu"
+msgstr "Panel"
 
 #~ msgid "Unknown"
 #~ msgstr "NIeznany"
