--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,12 +1,16 @@
+2009-08-01  Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
+
 2009-07-15  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Fix typo in Basque translation
+    * eu.po: Fix typo in Basque translation
 
 2009-07-09  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ast.po: Asturian translation added (Marcos).
 
-2009-06-26  Gabor Kelemen  <kelemeng@gnome.hu>
+2009-06-26  Gabor Kelemen <kelemeng@gnome.hu>
 
 	* hu.po: Translation reworked.
 
@@ -23,7 +27,7 @@
 
 	* lv.po: Latvian translation update (Rihards Prieditis)
 
-2009-04-20  Mișu Moldovan  <dumol@xfce.org>
+2009-04-20  Mișu Moldovan <dumol@xfce.org>
 
 	* ro.po: Romanian translation update
 
