2009-08-07  Gabor Kelemen  <kelemeng@gnome.hu>
	* hu.po: Translation updated.

(Old svn revision: 30438)

--- a/po/hu.po
+++ b/po/hu.po
@@ -31,7 +31,7 @@ msgstr "Eltávolítja ezt: „%s”?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
 msgid "The item will be removed from the panel and its configuration will be lost."
-msgstr "Az elem el lesz távolítva a panelről és beállításai elvesznek."
+msgstr "Az elem el lesz távolítva a panelről, beállításai elvesznek."
 
 #. TRANSLATORS: Properties menu item in the right-click plugin menu
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:836
@@ -755,11 +755,11 @@ msgstr "Terület, ahol az értesítési ikonok megjelennek"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr "Átváltás a nyitott ablakok között gombok használatával"
+msgstr "Átváltás a nyitott ablakok között, gombok használatával"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr "Átváltás a nyitott ablakok között menü használatával"
+msgstr "Átváltás a nyitott ablakok között, menü használatával"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
