update xfce translation
(Old svn revision: 30448)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-08  Mike Massonnet <mmassonnet@xfce.org>
+
+	* kk.po: Kazakh translation update (Baurzhan Muftakhidinov)
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2009-08-07  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
